# systools

./: .gitignore  Readme.html  Readme.md  grep  install.sh  meson.build
samples/: testsh
src/: appinst  apt-upgrade  bak  builddep  cbuild  cdeps  colortest  conf-reload  cstyle  extract.sh  fcheck  ff  getcss  git-check  git-clone  git-history.c  git-init  git-push  git-status  imgparse  imgtool  lcm.c  libshell  mcalc.c  mdconv  pdfcount  pdfmode  psmem  psmem.py  qninja  radio  restyle.c  rpimg  style.css  testdd  unbak  valgen  vrun  wallset  yfname
test/: listpak.py  radio
tests/: install_linux_kernel.txt  listpak  listpak.py
